# Statistics2024

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
Exc1/: CMakeLists.txt
Exc1/cpp/include/: simulation.hpp
Exc1/cpp/main/: main.cpp
Exc1/cpp/src/: approx.cpp  functions.cpp  simulate.cpp
Exc2/: CMakeLists.txt
Exc2/cpp/include/: axis.hpp  plot.hpp  simulation.hpp
Exc2/cpp/main/: main.cpp
Exc2/cpp/src/: plot.cpp  simulation.cpp
Exc3/: CMakeLists.txt
Exc3/Exc1/: CMakeLists.txt
Exc3/Exc1/cpp/include/: simulation.hpp
Exc3/Exc2/: CMakeLists.txt
Exc3/Exc2/cpp/include/: axis.hpp  plot.hpp  simulation.hpp
Exc3/Exc2/cpp/main/: main.cpp
Exc3/Exc3/: CMakeLists.txt
Exc3/Exc3/cpp/include/: simulation.hpp  stations.hpp
Exc3/Exc3/cpp/main/: main.cpp
Exc3/Exc3/cpp/src/: simulation.cpp  stations.cpp
Exc3/cpp/main/: main.cpp
Exc3/cpp/src/: simulation.cpp
Exc4/: .gitlab-ci.yml  CMakeLists.txt  ZadDom4.tex  exc1.py  exc2.py  exc3.py
Exc4/Exc1/: CMakeLists.txt  main.cpp
Exc4/cpp/main/: main.cpp
cpp/include/: approx.hpp  functions.hpp  simulate.hpp
cpp/main/: main.cpp
cpp/src/: approx.cpp  plot.cpp  simulate.cpp
